Version 0.5-1 (2010-09-17)

o Added Yamaguchi87 data (three-way mobility table)
o Added demo(yamaguchi-xie) illustrating fitting and visualization of the models of homogeneous and 
  log multiplicative layer effects fit in Xie (1992, Table 1)
o Added BIC to summarize() and friends
o Added Hauser79 data (two-way mobility table), plus some examples from Powers and Xie (2008)

Version 0.5-0 (2010-04-28)

o Fleshed out mosaic3d, allowing display of observed or expected, internally calculated or externally
  supplied residuals, specifying the initial 3D shape, etc.  This completes the 'top-level' work on
  mosaic3d(), borrowing code from vcd::strucplot.
o Added initial handling for zero cells in the table to mosaic3d().  
o Added center3d() for finding the mean coordinates of shape3d objects.
o Added demo(mosaic-hec) comparing 2D and 3D mosaics for HairEyeColor data
o Gave mosaic3d a label_edge argument, allowing labels for dimensions at minima or maxima
o Made mosaic3d object oriented, giving it a loglm method
o Added Kway(), fitting all 0-way, 1-way, 2-way, ... k-way models in a glm

Version 0.4-3 (2010-03-25)

o Added demo(mosaic3d-demo), a proof-of-concept for doing 3D mosaic displays
o Added mosaic3d(), an initial basic version.
o Factored out split3d() and gave it S3 methods

Version 0.4-2 (2010-03-09)

o Revised vignette("vcd-tutorial"): added some hints for mosaic(), corrected stuff regarding prior
  limitations of mosaic.glm()
o Added demo(Wong3-1): three-way table, with models of conditional association
o Added Suggest: effects for effects plots of glm(), multinom() and polr() models
o Added demo(housing): visualize models fit in example(housing, package="MASS") using mosaic() and
  effect plots.
o Updated demo(Wong2-3): added model comparison plots, glmlist processing
o Added Suggest: VGAM
o Extended package description in vcdExtra-package.Rd
o Added glmlist() to facilitate processing, extraction, plotting, etc. of a collection of glm() models