@@ -5,6 +5,7 @@ o Added demo(yamaguchi-xie) illustrating fitting and visualization of the models
   log multiplicative layer effects fit in Xie (1992, Table 1)
 o Added BIC to summarize() and friends
 o Added Hauser79 data (two-way mobility table), plus some examples from Powers and Xie (2008)
+o Added Crossings() to construct interactions for Goodman 1972 crossings model.
 
 Version 0.5-0 (2010-04-28)
 
